# skillsmith

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/: hooks.json
.cursor/: hooks.json
.skillsmith/: session-bootstrap.md
catalog/: catalog.toml
docs/: token-first-spec.md
examples/cursor-session-bootstrap/: README.md  inject-skillsmith-bootstrap.sh
hooks/: run-hook.cmd  session-start
scripts/: install.sh  migrate_to_wenyan.py  wenyan_dict.py
skills/api-contract-critic/: SKILL.md
skills/behavioral-pattern-architect/: SKILL.md
skills/commit-after-tested-change/: SKILL.md
skills/compression-skill-designer/: SKILL.md
skills/concurrency-pattern-architect/: SKILL.md
skills/creational-pattern-architect/: SKILL.md
skills/migration-guardian/: SKILL.md
skills/pm-challenger/: SKILL.md
skills/pm-delivery-planner/: SKILL.md
skills/pm-explorer/: SKILL.md
skills/pm-prioritizer/: SKILL.md
skills/product-management-orchestrator/: SKILL.md
skills/product-manager-challenger/: SKILL.md
skills/repo-scout/: SKILL.md
skills/rust-patterns-architecture/: SKILL.md
skills/software-architecture-architect/: SKILL.md
skills/structural-pattern-architect/: SKILL.md
skills/test-determinism/: SKILL.md
skills/test-suite-design/: SKILL.md
skills/using-skillsmith/: NANO_BOOTSTRAP.md  SKILL.md
skills/wenyan-engineering-principles/: SKILL.md
src/: catalog.rs  caveman_defluff.rs  error.rs  hook_post_shell.rs  install_targets.rs  installer.rs  lib.rs  main.rs  ui.rs
src/catalog/: cache.rs  (+11 more)
tests/: catalog_resolve.rs  install_flow.rs
(+319 files in other folders)
