[package]
name = "skillsmith"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.9.2"
walkdir = "2.5.0"
serde_yaml = "0.9.34"
