[package]
name = "skillsmith"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/brady-ch/skillsmith"
default-run = "skillsmith"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.9.2"
walkdir = "2.5.0"
serde_yaml = "0.9.34"
regex = "1.12"
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1.42", features = ["io-std", "macros", "rt-multi-thread"] }
